update product & about

--- a/index.html
+++ b/index.html
@@ -67,10 +67,11 @@
     </section>
 
     <!-- products start -->
-    <div class="products" id="products">
+    <div class="products" id="Products">
         <h1>Products</h1>
 
         <div class="box">
+
             <div class="card">
 
                 <div class="small_card">
@@ -85,7 +86,7 @@
                 <div class="products_text">
                     <h2>NIKE</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     </p>
                     <h3>$100.99</h3>
                     <div class="products_star">
@@ -94,11 +95,10 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
                     </div>
                     <a href="#" class="btn">Add To Cart</a>
-
                 </div>
+
             </div>
 
             <div class="card">
@@ -115,24 +115,22 @@
                 <div class="products_text">
                     <h2>NIKE</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     </p>
-                    <h3>$100.99</h3>
+                    <h3>$200.99</h3>
                     <div class="products_star">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
                     </div>
                     <a href="#" class="btn">Add To Cart</a>
-
                 </div>
+
             </div>
 
-
-             <div class="card">
+            <div class="card">
 
                 <div class="small_card">
                     <i class="fa-solid fa-heart"></i>
@@ -146,22 +144,20 @@
                 <div class="products_text">
                     <h2>NIKE</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     </p>
-                    <h3>$100.99</h3>
+                    <h3>$175.99</h3>
                     <div class="products_star">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <i class="fa-regular fa-star"></i>
                     </div>
                     <a href="#" class="btn">Add To Cart</a>
-
                 </div>
-            </div>
 
+            </div>
 
             <div class="card">
 
@@ -177,23 +173,20 @@
                 <div class="products_text">
                     <h2>NIKE</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     </p>
-                    <h3>$100.99</h3>
+                    <h3>$120.99</h3>
                     <div class="products_star">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
                     </div>
                     <a href="#" class="btn">Add To Cart</a>
-
                 </div>
+
             </div>
-
-
 
             <div class="card">
 
@@ -209,11 +202,10 @@
                 <div class="products_text">
                     <h2>NIKE</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     </p>
-                    <h3>$100.99</h3>
+                    <h3>$150.99</h3>
                     <div class="products_star">
-                        <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -221,10 +213,9 @@
                         <i class="fa-solid fa-star"></i>
                     </div>
                     <a href="#" class="btn">Add To Cart</a>
-
                 </div>
-            </div>
 
+            </div>
 
             <div class="card">
 
@@ -240,22 +231,49 @@
                 <div class="products_text">
                     <h2>NIKE</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     </p>
-                    <h3>$100.99</h3>
+                    <h3>$220.99</h3>
                     <div class="products_star">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star-half-stroke"></i>
                     </div>
                     <a href="#" class="btn">Add To Cart</a>
-
                 </div>
+
             </div>
 
+            <div class="card">
+
+                <div class="small_card">
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-solid fa-share"></i>
+                </div>
+
+                <div class="image">
+                    <img src="image/shoes.png">
+                </div>
+
+                <div class="products_text">
+                    <h2>NIKE</h2>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    </p>
+                    <h3>$110.99</h3>
+                    <div class="products_star">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <a href="#" class="btn">Add To Cart</a>
+                </div>
+
+            </div>
 
             <div class="card">
 
@@ -271,59 +289,75 @@
                 <div class="products_text">
                     <h2>NIKE</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     </p>
-                    <h3>$100.99</h3>
+                    <h3>$150.99</h3>
                     <div class="products_star">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star-half-stroke"></i>
                     </div>
                     <a href="#" class="btn">Add To Cart</a>
-
                 </div>
+
             </div>
-
-
-
-            <div class="card">
-
-                <div class="small_card">
-                    <i class="fa-solid fa-heart"></i>
-                    <i class="fa-solid fa-share"></i>
-                </div>
-
-                <div class="image">
-                    <img src="image/shoes8.png">
-                </div>
-
-                <div class="products_text">
-                    <h2>NIKE</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    </p>
-                    <h3>$100.99</h3>
-                    <div class="products_star">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                    </div>
-                    <a href="#" class="btn">Add To Cart</a>
-
-                </div>
-            </div>
-
 
         </div>
     </div>
     <!-- products end -->
 
+
+    <!-- About start -->
+
+    <div class="about" id="About">
+        
+        <h1>Web<span>About</span></h1>
+
+        <div class="about_main">
+            <div class="about_image">
+                <div class="about_small_image">
+                    <img src="image/red_shoes1.png" onclick="functio(this)">
+                    <img src="image/red_shoes2.png" onclick="functio(this)">
+                    <img src="image/red_shoes3.png" onclick="functio(this)">
+                    <img src="image/red_shoes4.png" onclick="functio(this)">
+                </div>
+
+                <div class="image_contaner">
+                    <img src="image/red_shoes1.png" id="imagebox">
+                </div>
+
+            </div>
+
+            <div class="about_text">
+                <p>
+                    Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical 
+                    Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at 
+                    Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a 
+                    Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the 
+                    undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" 
+                    (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, 
+                    very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes 
+                    from a line in section 1.10.32. The standard chunk of Lorem Ipsum used since the 1500s is reproduced below 
+                    for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also 
+                    reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
+                </p>
+            </div>
+
+        </div>
+
+        <a href="#" class="about_btn">Shop Now</a>
+
+        <script>
+            function functio(small){
+                var full = document.getElementById("imagebox")
+                full.src = small.src
+            }
+        </script>
+        
+    </div>
+    <!-- About end -->
 
 </body>
 </html>
